# test2

./: CMakeLists.txt  main.cpp  main_test.cpp  poyasneniya.txt  run.sh  server.cpp  server.h  storage.cpp  storage.h  structure.txt  test.sh
